--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <version>1.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
